minimap: Attempt to improve the look and feel

This patch attempt to make the minimap look better.

* The design has been reviewed during Akademy
* It now feel "native" in the canvas for both Breeze and Fusion
  styles. Oxygen has some hardcoded extra borders, this is a
  known limitation of this patch.
* Improve support for darker themes. The previous implementation
  failed to properly display the visible area
* Partially degrade the visible section view when the handle is
  at its minimum height. This could be improved later on.

BUG: 309553